fix: inspect uploaded backup directories