@@ -28,7 +28,6 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -36,8 +35,63 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class InspectionExecutionServiceTest {
 
     @Test
-    void mixedGoodAndBadFilesPreserveUploadOrderStatusesAndCounts() {
-        BackupInspectionRunner runner = path -> switch (read(path)) {
+    void rebuildsBackupDirectoriesAndInspectsEachTopLevelDirectoryOnceInFirstSeenOrder() {
+        List<String> observedDirectories = new ArrayList<>();
+        List<String> observedFiles = new ArrayList<>();
+        InspectionExecutionService service = service(path -> {
+            assertTrue(Files.isDirectory(path));
+            observedDirectories.add(path.getFileName().toString());
+            try (var files = Files.walk(path)) {
+                observedFiles.addAll(files
+                        .filter(Files::isRegularFile)
+                        .map(file -> path.getFileName() + "/" + path.relativize(file)
+                                + "=" + read(file))
+                        .toList());
+            } catch (IOException exception) {
+                throw new IllegalStateException(exception);
+            }
+            return result(path.getFileName().toString(), true, device("body"), List.of(), List.of());
+        });
+
+        InspectionBatchResponse response = service.inspect(List.of(
+                upload("APR15R1/PLCEngine/nwid1.nxd", "network"),
+                upload("APR15R1/RESUME.bak", ""),
+                upload("SECOND\\config\\robot.dat", "second"),
+                upload("APR15R1/config/late.dat", "late")));
+
+        observedFiles.sort(String::compareTo);
+        assertEquals(List.of("APR15R1", "SECOND"), observedDirectories);
+        assertEquals(List.of(
+                "APR15R1/PLCEngine/nwid1.nxd=network",
+                "APR15R1/RESUME.bak=",
+                "APR15R1/config/late.dat=late",
+                "SECOND/config/robot.dat=second"), observedFiles);
+        assertEquals(List.of("APR15R1", "SECOND"),
+                response.items().stream().map(InspectionItem::sourceFileName).toList());
+    }
+
+    @Test
+    void blocksEscapingPathsWithoutPreventingOtherBackupDirectories() {
+        List<String> observedDirectories = new ArrayList<>();
+        InspectionExecutionService service = service(path -> {
+            observedDirectories.add(path.getFileName().toString());
+            return result("good", true, device("body"), List.of(), List.of());
+        });
+
+        InspectionBatchResponse response = service.inspect(List.of(
+                upload("BAD/../../escaped.txt", "escape"),
+                upload("/absolute/backup.dat", "absolute"),
+                upload("GOOD/config/robot.dat", "good")));
+
+        assertEquals(List.of("GOOD"), observedDirectories);
+        assertEquals(List.of(InspectionStatus.FAILED, InspectionStatus.FAILED, InspectionStatus.SUCCESS),
+                response.items().stream().map(InspectionItem::status).toList());
+        assertFalse(Files.exists(Path.of("escaped.txt")));
+    }
+
+    @Test
+    void mixedGoodAndBadDirectoriesPreserveUploadOrderStatusesAndCounts() {
+        BackupInspectionRunner runner = path -> switch (readMarker(path)) {
             case "good" -> result("good", true, device("body"), List.of(), List.of());
             case "partial" -> result("partial", false, null, List.of(device("child")), List.of("body missing"));
             default -> throw new IllegalArgumentException("not a backup");
@@ -45,11 +99,11 @@ class InspectionExecutionServiceTest {
         InspectionExecutionService service = service(runner);
 
         InspectionBatchResponse response = service.inspect(List.of(
-                upload("good.zip", "good"),
-                upload("broken.bin", "bad"),
-                upload("partial.backup", "partial")));
+                directoryUpload("good", "good"),
+                directoryUpload("broken", "bad"),
+                directoryUpload("partial", "partial")));
 
-        assertEquals(List.of("good.zip", "broken.bin", "partial.backup"),
+        assertEquals(List.of("good", "broken", "partial"),
                 response.items().stream().map(InspectionItem::sourceFileName).toList());
         assertEquals(List.of(InspectionStatus.SUCCESS, InspectionStatus.FAILED, InspectionStatus.PARTIAL),
                 response.items().stream().map(InspectionItem::status).toList());
@@ -73,15 +127,15 @@ class InspectionExecutionServiceTest {
                 throw new RuntimeException("internal database password=secret");
             });
 
-            InspectionItem item = service.inspect(List.of(upload("robot-display.backup", "bad")))
+            InspectionItem item = service.inspect(List.of(directoryUpload("robot-display", "bad")))
                     .items().getFirst();
 
             assertEquals(InspectionStatus.FAILED, item.status());
-            assertEquals("解析备份文件失败，请查看日志", item.errorMessage());
+            assertEquals("解析备份目录失败，请查看日志", item.errorMessage());
             assertFalse(item.errorMessage().contains("internal database password=secret"));
             assertTrue(appender.list.stream().anyMatch(event ->
                     event.getLevel() == Level.ERROR
-                            && event.getFormattedMessage().contains("robot-display.backup")
+                            && event.getFormattedMessage().contains("robot-display")
                             && event.getThrowableProxy() != null));
         } finally {
             logger.setAdditive(additive);
@@ -93,15 +147,15 @@ class InspectionExecutionServiceTest {
     @Test
     void expectedBackupAndInputErrorsRemainUserReadable() {
         InspectionExecutionService service = service(path -> {
-            if (read(path).equals("load")) {
+            if (readMarker(path).equals("load")) {
                 throw new BackupLoadException("无法打开备份文件");
             }
             throw new IllegalArgumentException("不支持的备份格式");
         });
 
         InspectionBatchResponse response = service.inspect(List.of(
-                upload("load.backup", "load"),
-                upload("invalid.backup", "invalid")));
+                directoryUpload("load", "load"),
+                directoryUpload("invalid", "invalid")));
 
         assertEquals(
                 List.of("无法打开备份文件", "不支持的备份格式"),
@@ -113,7 +167,7 @@ class InspectionExecutionServiceTest {
         NachiNetResume warned = result("warned", true, device("body"), List.of(), List.of("child warning"));
         InspectionExecutionService service = service(path -> warned);
 
-        InspectionItem item = service.inspect(List.of(upload("warned.zip", "warned"))).items().getFirst();
+        InspectionItem item = service.inspect(List.of(directoryUpload("warned", "warned"))).items().getFirst();
 
         assertEquals(InspectionStatus.PARTIAL, item.status());
         assertEquals(warned, item.result());
@@ -125,7 +179,7 @@ class InspectionExecutionServiceTest {
         InspectionExecutionService service = service(path ->
                 result("empty", false, null, null, List.of("robot network missing", "device network missing")));
 
-        InspectionItem item = service.inspect(List.of(upload("empty.zip", "empty"))).items().getFirst();
+        InspectionItem item = service.inspect(List.of(directoryUpload("empty", "empty"))).items().getFirst();
 
         assertEquals(InspectionStatus.FAILED, item.status());
         assertNull(item.result());
@@ -138,7 +192,7 @@ class InspectionExecutionServiceTest {
         InspectionExecutionService service = service(path ->
                 result("empty", false, null, null, List.of()));
 
-        InspectionItem item = service.inspect(List.of(upload("empty.zip", "empty"))).items().getFirst();
+        InspectionItem item = service.inspect(List.of(directoryUpload("empty", "empty"))).items().getFirst();
 
         assertEquals(InspectionStatus.FAILED, item.status());
         assertNull(item.result());
@@ -146,21 +200,23 @@ class InspectionExecutionServiceTest {
     }
 
     @Test
-    void arbitraryExtensionsAndFilesWithoutExtensionsAreAccepted() {
+    void arbitraryExtensionsAndFilesWithoutExtensionsAreRebuiltInsideDirectory() {
         List<Path> observedPaths = new ArrayList<>();
+        List<String> observedContents = new ArrayList<>();
         InspectionExecutionService service = service(path -> {
             observedPaths.add(path);
+            observedContents.add(read(path.resolve("backup.strange-extension")));
+            observedContents.add(read(path.resolve("backup")));
             return result(path.getFileName().toString(), true, device("body"), List.of(), List.of());
         });
 
         InspectionBatchResponse response = service.inspect(List.of(
-                upload("backup.strange-extension", "one"),
-                upload("backup", "two")));
+                upload("backup/backup.strange-extension", "one"),
+                upload("backup/backup", "two")));
 
-        assertEquals(List.of(InspectionStatus.SUCCESS, InspectionStatus.SUCCESS),
+        assertEquals(List.of(InspectionStatus.SUCCESS),
                 response.items().stream().map(InspectionItem::status).toList());
-        assertTrue(observedPaths.get(0).getFileName().toString().endsWith(".strange-extension"));
-        assertTrue(observedPaths.get(1).getFileName().toString().endsWith("backup"));
+        assertEquals(List.of("one", "two"), observedContents);
     }
 
     @Test
@@ -168,13 +224,13 @@ class InspectionExecutionServiceTest {
         List<Path> observedPaths = new ArrayList<>();
         InspectionExecutionService service = service(path -> {
             observedPaths.add(path);
-            if (read(path).equals("bad")) {
+            if (readMarker(path).equals("bad")) {
                 throw new IllegalArgumentException("inspection failed");
             }
             return result("good", true, device("body"), List.of(), List.of());
         });
 
-        service.inspect(List.of(upload("good.zip", "good"), upload("bad.zip", "bad")));
+        service.inspect(List.of(directoryUpload("good", "good"), directoryUpload("bad", "bad")));
 
         assertEquals(2, observedPaths.size());
         assertEquals(observedPaths.get(0).getParent(), observedPaths.get(1).getParent());
@@ -185,35 +241,22 @@ class InspectionExecutionServiceTest {
     }
 
     @Test
-    void duplicateUploadFilenamesDoNotCollide() {
+    void filesFromTheSameTopLevelDirectoryAreInspectedTogether() {
         List<Path> observedPaths = new ArrayList<>();
         List<String> observedContents = new ArrayList<>();
         InspectionExecutionService service = service(path -> {
             observedPaths.add(path);
-            observedContents.add(read(path));
+            observedContents.add(read(path.resolve("first.dat")));
+            observedContents.add(read(path.resolve("second.dat")));
             return result("good", true, device("body"), List.of(), List.of());
         });
 
-        service.inspect(List.of(upload("same.zip", "first"), upload("same.zip", "second")));
+        service.inspect(List.of(
+                upload("same/first.dat", "first"),
+                upload("same/second.dat", "second")));
 
-        assertNotEquals(observedPaths.get(0).getFileName(), observedPaths.get(1).getFileName());
+        assertEquals(1, observedPaths.size());
         assertEquals(List.of("first", "second"), observedContents);
-    }
-
-    @Test
-    void sanitizesOnlySlashAndBackslashInUploadedFilename() {
-        List<String> observedNames = new ArrayList<>();
-        InspectionExecutionService service = service(path -> {
-            observedNames.add(path.getFileName().toString());
-            return result("good", true, device("body"), List.of(), List.of());
-        });
-
-        service.inspect(List.of(upload("../folder\\backup.$odd", "data")));
-
-        assertEquals(1, observedNames.size());
-        assertFalse(observedNames.getFirst().contains("/"));
-        assertFalse(observedNames.getFirst().contains("\\"));
-        assertTrue(observedNames.getFirst().endsWith(".._folder_backup.$odd"));
     }
 
     @Test
@@ -223,7 +266,7 @@ class InspectionExecutionServiceTest {
         NachiNetResume partial = result("partial", false, null, List.of(device("child")), List.of("body missing"));
         RecordingExporter exporter = new RecordingExporter(new byte[]{1, 2, 3});
         InspectionExecutionService service = new InspectionExecutionService(
-                path -> switch (read(path)) {
+                path -> switch (readMarker(path)) {
                     case "success" -> success;
                     case "partial" -> partial;
                     default -> failed;
@@ -231,28 +274,28 @@ class InspectionExecutionServiceTest {
                 exporter);
 
         byte[] exported = service.exportExcel(List.of(
-                upload("success.zip", "success"),
-                upload("failed.zip", "failed"),
-                upload("partial.zip", "partial")));
+                directoryUpload("success", "success"),
+                directoryUpload("failed", "failed"),
+                directoryUpload("partial", "partial")));
 
         assertArrayEquals(new byte[]{1, 2, 3}, exported);
         assertEquals(List.of(success, partial), exporter.observedResults);
     }
 
     @Test
-    void nullEmptyOrOnlyEmptyUploadsThrowBadRequestException() {
+    void nullEmptyOrOnlyNullUploadsThrowBadRequestExceptionButEmptyFilesAreKept() {
         InspectionExecutionService service = service(path ->
                 result("unused", true, device("body"), List.of(), List.of()));
 
-        assertEquals("请上传备份文件",
+        assertEquals("请选择备份目录",
                 assertThrows(BadRequestException.class, () -> service.inspect(null)).getMessage());
-        assertEquals("请上传备份文件",
+        assertEquals("请选择备份目录",
                 assertThrows(BadRequestException.class, () -> service.inspect(List.of())).getMessage());
-        assertEquals("请上传备份文件",
-                assertThrows(BadRequestException.class, () -> service.inspect(Arrays.asList(
-                        null,
-                        new MockMultipartFile("files", "empty.zip", "application/zip", new byte[0]))))
-                        .getMessage());
+        assertEquals("请选择备份目录",
+                assertThrows(BadRequestException.class, () -> service.inspect(Arrays.asList(null, null))).getMessage());
+        assertEquals(InspectionStatus.SUCCESS, service.inspect(List.of(
+                new MockMultipartFile("files", "empty/zero.dat", "application/octet-stream", new byte[0])))
+                .items().getFirst().status());
     }
 
     @Test
@@ -262,7 +305,7 @@ class InspectionExecutionServiceTest {
 
         BadRequestException exception = assertThrows(
                 BadRequestException.class,
-                () -> service.exportExcel(List.of(upload("empty.zip", "empty"))));
+                () -> service.exportExcel(List.of(directoryUpload("empty", "empty"))));
 
         assertEquals("没有可导出的网络设备信息", exception.getMessage());
     }
@@ -295,6 +338,14 @@ class InspectionExecutionServiceTest {
                 originalFilename,
                 "application/octet-stream",
                 contents.getBytes(StandardCharsets.UTF_8));
+    }
+
+    private static MockMultipartFile directoryUpload(String directoryName, String contents) {
+        return upload(directoryName + "/marker.txt", contents);
+    }
+
+    private static String readMarker(Path directory) {
+        return read(directory.resolve("marker.txt"));
     }
 
     private static String read(Path path) {
